--- a/18-hello-dockerfile-instructions-healthcheck/healthcheck-container/Dockerfile
+++ b/18-hello-dockerfile-instructions-healthcheck/healthcheck-container/Dockerfile
@@ -2,9 +2,16 @@
 FROM ubuntu:16.04
 MAINTAINER Sergio F. Gonzalez "sergio.f.gonzalez@gmail.com"
 ENV REFRESHED_AT 2017-01-25
+
 RUN apt-get -qq update
 RUN apt-get install -y nginx
 RUN echo 'Hi, I am in your NGINX running inside a container' \
     > /var/www/html/index.html
-ENTRYPOINT ["/usr/sbin/nginx"]
 EXPOSE 80
+
+ENTRYPOINT ["/usr/sbin/nginx"]
+CMD ["-g",  "daemon off;"]
+
+# Execute curl on localhost and return 1 if the command fails
+HEALTHCHECK --interval=10s --timeout=1m --retries=5 \
+ CMD curl http://localhost || exit 1
