Add Express-Redis app with Docker networking

--- a/03-sample-containers/e06-express+redis-stack/express-container/shoutbox_express_app/app/src/application.yml
+++ b/03-sample-containers/e06-express+redis-stack/express-container/shoutbox_express_app/app/src/application.yml
@@ -12,8 +12,8 @@ server:
 app:
   entriesPerPage: 3
 
-db:
-  host: redis-db
-  port: 6379
-
 ERROR_ROUTE: true
+
+db:
+  host: localhost
+  port: 6379
