--- a/04-orchestration-and-service-discovery/05-kubernetes-pods/nodejs-sysdata-webapp-with-annotations.yml
+++ b/04-orchestration-and-service-discovery/05-kubernetes-pods/nodejs-sysdata-webapp-with-annotations.yml
@@ -1,10 +1,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nodejs-sysdata-webapp-yml-labels
+  name: nodejs-sysdata-webapp-yml-labels-annotations
   labels:
     creation_method: manual
     env: prod
+  annotations:
+    com.github.sergiofgonzalez/description: "Node.js webapp with labels and annotations"
 spec:
   containers:
     - image: sergiofgonzalez/nodejs-sysdata-webapp:v1
