--- a/04-orchestration-and-service-discovery/05-kubernetes-pods/nodejs-sysdata-webapp-with-namespace.yml
+++ b/04-orchestration-and-service-discovery/05-kubernetes-pods/nodejs-sysdata-webapp-with-namespace.yml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nodejs-sysdata-webapp-yml-labels
+  name: nodejs-sysdata-webapp-yml-ns
+  namespace: custom-namespace
   labels:
     creation_method: manual
     env: prod
